removed use of sun Base64 class